--- a/catalog.html
+++ b/catalog.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
     <title>Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo" href="index.html" aria-current="page">
-          <img class="page-header-logo" src="images/log.svg" width="140" height="70" alt="Логотип сайта «Седона».">
+          <img class="page-header-logo" src="images/log.svg" width="140" height="70" alt="Логотип сайта «Седона»">
         </a>
         <ul class="nav-list">
         <li class="nav-item nav-item-current">
@@ -25,11 +26,11 @@
       <ul class="navigation-user">
         <li class="navigation-item">
             <a class="navigation-search" href="#">
-            <span class="aria-label">Поиск."></span>
+            <span class="aria-label">Поиск.</span>
           </a>
         <li class="navigation-item">
           <a class="navigation-favorite" href="#">
-            <span class="aria-label">Избранное.></span>
+            <span class="aria-label">Избранное.</span>
           </a>
             </li>
         <li class="navigation-item">
@@ -43,13 +44,13 @@
     <h1 class="inner-header-title">Гостиницы Седоны</h1>
     <ul class="breadcrumbs">
       <li class="breadcrumbs-item">
-        <a class="breadcrumbs-link" href="index.html"><span class="visually-hidden">Главная страница.</span></a>
+        <a class="breadcrumbs-link" href="index.html"><span class="visually-hidden">Переход на главную страницу.</span></a>
         </li>
         <li class="breadcrumbs-item">Гостиницы>
       </li>
     </ul>
   </header>
-  <section class="filter">
+   <section class="filter">
     <h2 class="visually-hidden">Список гостиниц с фильтрами.</h2>
     <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get"></form>
     <fieldset class="catalog-filter-hotels">
@@ -150,7 +151,7 @@
   <ul class="cards">
     <li class="card">
     <a class="card-image" href="#">
-      <img src="images/hotels/amara.jpg" alt="Звездное небо на фоне каньона.">
+      <img src="images/hotels/amara.jpg" width="300" height="212" alt="Звездное небо на фоне каньона">
     </a>
     <a href="#">
       <h3 class="card-title">Amara Resort & Spa</h3>
@@ -161,14 +162,14 @@
       </p>
       <p><a class="link-card" href="#">ПОДРОБНЕЕ</a></p>
       <p><button class="select" type="button">В ИЗБРАННОЕ</button></p>
-      <p class="stars">
+        <p class="stars-4">
         <span class="stars"></span>
         <span class="visually-hidden">Количество звезд гостиницы - 4 звезды из 5.</span></p>
         <p class="rate">Рейтинг: 8,5</p>
       </li>
       <li>
       <a class="card-image" href="#">
-        <img src="images/hotels/villas.jpg" alt="Радуга на фоне гор.">
+        <img src="images/hotels/villas.jpg" width="300" height="212" alt="Радуга на фоне гор">
       </a>
       <a href="#">
         <h3 class="card-title">Villas at Poco Diablo</h3>
@@ -179,14 +180,14 @@
         </p>
         <p><a class="link-card" href="#">ПОДРОБНЕЕ</a></p>
           <button class="selected" type="button">В ИЗБРАННОМ</button>
-          <p class="stars">
-            <span class="stars"></span>
+          <p class="stars-4">
+            <span class="stars-4"></span>
             <span class="visually-hidden">Количество звезд гостиницы - 4 звезды из 5.</span></p>
             <p class="rate">Рейтинг: 9,2</p>
           </li>
           <li class="card">
             <a class="card-image" href="#">
-              <img src="images/hotels/desert.jpg" alt="Горы на фоне голубого неба.">
+              <img src="images/hotels/desert.jpg" width="300" height="212" alt="Горы на фоне голубого неба">
             </a>
             <a href="#">
               <h3 class="card-title">Desert Quail Inn</h3>
@@ -197,14 +198,13 @@
               </p>
               <p><a class="link-card" href="#">ПОДРОБНЕЕ</a></p>
               <p><button class="select" type="button">В ИЗБРАННОЕ</button></p>
-              <p class="stars">
-                <span class="stars"></span>
+              <p class="stars-3">
                 <span class="visually-hidden">Количество звезд гостиницы - 3 звезды из 5.</span></p>
                 <p class="rate">Рейтинг: 6,9</p>
               </li>
               <li class="card">
                 <a class="card-image" href="#">
-                  <img src="images/hotels/green.jpg" alt="Горы на фоне звездного неба.">
+                  <img src="images/hotels/green.jpg" width="300" height="212" alt="Горы на фоне звездного неба">
                 </a>
                 <a href="#">
                   <h3 class="card-title">GreenTree Inn</h3>
@@ -215,8 +215,7 @@
                   </p>
                   <p><a class="link-card" href="#">ПОДРОБНЕЕ</a></p>
                   <p><button class="select" type="button">В ИЗБРАННОЕ</button></p>
-                  <p class="stars">
-                    <span class="stars"></span>
+                  <p class="stars-2">
                     <span class="visually-hidden">Количество звезд гостиницы - 2 звезды из 5.</span></p>
                     <p class="rate">Рейтинг: 5,0</p>
                   </li>
@@ -251,6 +250,24 @@
       </form>
 </section>
 <footer>
+<h3 class="title">
+    <span class="visually-hidden">Социальные сети.</span>
+  </h3>
+        <!-- <ul class="list-social">
+          <li class="item-social">
+            <a class="social-button" href="https://vk.com/htmlacademy">
+              <img class="social-image" src="images/social-icons/vkontakte.svg" width="24" height="14" alt="ВКонтакте">
+            </a>
+          </li>
+          <li class="item-social">
+            <a class="social-button" href="https://t.me/htmlacademy">
+              <img class="social-image" src="images/social-icons/telegram.svg" width="18" height="15" alt="Телеграмм">
+            </a>
+            </li>
+          <li class="item-social">
+                <a class="social-button" href="https://www.youtube.com/user/">
+                  <img class="social-image" src="images/social-icons/youtube.svg" width="22" height="17" alt="Телеграмм">
+                </a> -->
   <h3 class="title">
     <span class="visually-hidden">Социальные сети</span>
   </h3>
@@ -275,6 +292,10 @@
   <a class="address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
   </li>
   </ul>
+  <!-- <p class="about-text">
+    <a href="https://htmlacademy.ru/">
+      <img class="about-text" src="images/htmlacademy.svg" width="115" height="33" alt="Сайт создан htmlacademy">
+    </a> -->
   <p class="about-text">
   <a href="https://htmlacademy.ru/">
   <span class="visually-hidden">Сайт создан htmlacademy</span>
