--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
     <title>Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo" href="index.html" aria-current="page">
-          <img class="page-header-logo" src="images/log.svg" width="140" height="70" alt="Логотип сайта «Седона».">
+          <img class="page-header-logo" src="images/log.svg" width="140" height="70" alt="Логотип сайта «Седона»">
         </a>
         <ul class="nav-list">
         <li class="nav-item nav-item-current">
@@ -25,11 +26,11 @@
       <ul class="navigation-user">
         <li class="navigation-item">
             <a class="navigation-search" href="#">
-            <span class="aria-label">Поиск."></span>
+            <span class="aria-label">Поиск.</span>
           </a>
         <li class="navigation-item">
           <a class="navigation-favorite" href="#">
-            <span class="aria-label">Избранное.></span>
+            <span class="aria-label">Избранное.</span>
           </a>
             </li>
         <li class="navigation-item">
@@ -47,7 +48,7 @@
     </h1>
     <div class="welcome">
     <img class="hero-image-description" src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать в Седону! Потому что Гранд-Каньон - отстой!">
-     </div>
+    </div>
   </section>
   <section class="advantages">
     <h2 class="advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
@@ -100,7 +101,7 @@
     <a class="search-catalog" href="catalog.html">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
     </section>
     <section class="subscribe">
-      <h2 class="subscribe">Подпишитесь на рассылку</h2>
+      <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
     <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
         <input class="field" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email" required>
@@ -109,35 +110,57 @@
 </section>
 </main>
 <footer>
-<h3 class="title">
-  <span class="visually-hidden">Социальные сети</span>
-</h3>
-      <ul class="list-social">
-        <li class="item-social">
-          <a class="social-button" href="https://vk.com/htmlacademy">
-            <span class="visually-hidden">Вконтакте.</span>
-          </a>
-        </li>
-        <li class="item-social">
-          <a class="social-button" href="https://t.me/htmlacademy">
-            <span class="visually-hidden">Телеграмм.</span>
-            </a>
-          </li>
-        <li class="item-social">
-              <a class="social-button" href="https://www.youtube.com/user/">
-                <span class="visually-hidden">Ютуб.</span>
+  <h3 class="title">
+      <span class="visually-hidden">Социальные сети.</span>
+    </h3>
+          <!-- <ul class="list-social">
+            <li class="item-social">
+              <a class="social-button" href="https://vk.com/htmlacademy">
+                <img class="social-image" src="images/social-icons/vkontakte.svg" width="24" height="14" alt="ВКонтакте">
               </a>
-        </li>
-<li class="phone">
-<span class="visually-hidden">Телефон</span>
-<a class="address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-</li>
-</ul>
-<p class="about-text">
-<a href="https://htmlacademy.ru/">
-<span class="visually-hidden">Сайт создан htmlacademy</span>
-</a>
-</p>
-</footer>
-</body>
-</html>
+            </li>
+            <li class="item-social">
+              <a class="social-button" href="https://t.me/htmlacademy">
+                <img class="social-image" src="images/social-icons/telegram.svg" width="18" height="15" alt="Телеграмм">
+              </a>
+              </li>
+            <li class="item-social">
+                  <a class="social-button" href="https://www.youtube.com/user/">
+                    <img class="social-image" src="images/social-icons/youtube.svg" width="22" height="17" alt="Телеграмм">
+                  </a> -->
+    <h3 class="title">
+      <span class="visually-hidden">Социальные сети</span>
+    </h3>
+          <ul class="list-social">
+            <li class="item-social">
+              <a class="social-button" href="https://vk.com/htmlacademy">
+                <span class="visually-hidden">Вконтакте.</span>
+              </a>
+            </li>
+            <li class="item-social">
+              <a class="social-button" href="https://t.me/htmlacademy">
+                <span class="visually-hidden">Телеграмм.</span>
+                </a>
+              </li>
+            <li class="item-social">
+                  <a class="social-button" href="https://www.youtube.com/user/">
+                    <span class="visually-hidden">Ютуб.</span>
+                  </a>
+            </li>
+    <li class="phone">
+    <span class="visually-hidden">Телефон</span>
+    <a class="address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+    </li>
+    </ul>
+    <!-- <p class="about-text">
+      <a href="https://htmlacademy.ru/">
+        <img class="about-text" src="images/htmlacademy.svg" width="115" height="33" alt="Сайт создан htmlacademy">
+      </a> -->
+    <p class="about-text">
+    <a href="https://htmlacademy.ru/">
+    <span class="visually-hidden">Сайт создан htmlacademy</span>
+    </a>
+    </p>
+    </footer>
+    </body>
+    </html>
