--- a/catalog.html
+++ b/catalog.html
@@ -47,11 +47,12 @@
       <li class="breadcrumbs-item">
         <a class="breadcrumbs-link" href="index.html"><span class="visually-hidden">Переход на главную страницу</span></a>
         </li>
+        <li class="further"></li>
         <li class="breadcrumbs-item">Гостиницы
       </li>
     </ul>
   </header>
-   <section class="filter">
+  <section class="filter">
     <h2 class="visually-hidden">Список гостиниц с фильтрами</h2>
     <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get"></form>
     <fieldset class="catalog-filter-hotels">
@@ -102,7 +103,7 @@
             </fieldset>
             <div class="price">
               <fieldset class="price-filter">
-                <legend>Стоимость, ₽::</legend>
+                <legend class="catalog-filter-title">Стоимость, ₽::</legend>
                 <label for="min-price"><span class="visually-hidden">минимальная цена</span></label>
                   <input id="min-price" type="text" placeholder="от" name="min-price">
                   <label for="max-price"><span class="visually-hidden">максимальная цена</span></label>
@@ -134,19 +135,29 @@
                   </fieldset> -->
         </main>
 <section class="result-search">
-  <h2 class="inner-header-title">Найдено гостиниц: 38</h2>
+  <h2 class="inner-header-results">Найдено гостиниц: 38</h2>
     <!-- 38 - цифра тянется откуда-то -->
     <select class="select-control" aria-label="Сортировка">
       <option value="cheap">Сначала дешевые</option>
       <option value="popular">Сначала популярные</option>
       <option value="expensive">Сначала дорогие</option>
     </select>
-    <button type="button" name="show-card"><span class="aria-label">Показать карточки</span>
+    <a class="button-show-card"  href="#" >
+      <span class="visually-hidden">Показать карточки</span>
+    </a>
+    <a class="button-show-slide"  href="#" >
+      <span class="visually-hidden">Показать одну на странице</span>
+    </a>
+    <a class="button-show-list"  href="#" >
+      <span class="visually-hidden">Показать список</span>
+    </a>
+
+    <!-- <button type="button" name="show-card"><span class="aria-label">Показать карточки</span>
     </button>
     <button type="button" name="show-slide"><span class="aria-label">Показать одну на странице</span>
     </button>
     <button type="button" name="show-list"><span class="aria-label">Показать список</span>
-    </button>
+    </button> -->
     </section>
   <section class="hotels">
   <ul class="cards">
@@ -154,15 +165,12 @@
     <a class="card-image" href="#">
       <img src="images/hotels/amara.jpg" width="300" height="212" alt="Звездное небо на фоне каньона.">
     </a>
-    <a href="#">
-      <h3 class="card-title">Amara Resort & Spa</h3>
-    </a>
+      <a class="card-title" href="#">
+        <h3>Amara Resort & Spa</h3></a>
       <p class="card-description">Гостиница</p>
-      <p class="card-price">
-        <span class="card-price-value">От 4000 ₽</span>
-      </p>
-      <p><a class="link-card" href="#">ПОДРОБНЕЕ</a></p>
-      <p><button class="select" type="button">В ИЗБРАННОЕ</button></p>
+      <p class="card-price">от 4000 ₽</p>
+      <a class="link-card" href="#">ПОДРОБНЕЕ</a>
+      <button class="select" type="button">В ИЗБРАННОЕ</button>
         <p class="stars-4">
         <span class="stars"></span>
         <span class="visually-hidden">Количество звезд гостиницы - 4 звезды из 5</span></p>
@@ -172,14 +180,11 @@
       <a class="card-image" href="#">
         <img src="images/hotels/villas.jpg" width="300" height="212" alt="Радуга на фоне гор.">
       </a>
-      <a href="#">
-        <h3 class="card-title">Villas at Poco Diablo</h3>
-      </a>
+      <a class="card-title" href="#">
+        <h3>Villas at Poco Diablo</h3></a>
         <p class="card-description">Гостиница</p>
-        <p class="card-price">
-          <span class="card-price-value">От 5000 ₽</span>
-        </p>
-        <p><a class="link-card" href="#">ПОДРОБНЕЕ</a></p>
+        <p class="card-price">От 5000 ₽</p>
+        <a class="link-card" href="#">ПОДРОБНЕЕ</a>
           <button class="selected" type="button">В ИЗБРАННОМ</button>
           <p class="stars-4">
             <span class="stars-4"></span>
@@ -190,15 +195,12 @@
             <a class="card-image" href="#">
               <img src="images/hotels/desert.jpg" width="300" height="212" alt="Горы на фоне голубого неба.">
             </a>
-            <a href="#">
-              <h3 class="card-title">Desert Quail Inn</h3>
-            </a>
+            <a class="card-title" href="#">
+              <h3>Desert Quail Inn</h3></a>
               <p class="card-description">Гостиница</p>
-              <p class="card-price">
-                <span class="card-price-value">От 2500 ₽</span>
-              </p>
-              <p><a class="link-card" href="#">ПОДРОБНЕЕ</a></p>
-              <p><button class="select" type="button">В ИЗБРАННОЕ</button></p>
+              <p class="card-price">От 2500 ₽</p>
+              <a class="link-card" href="#">ПОДРОБНЕЕ</a>
+              <button class="select" type="button">В ИЗБРАННОЕ</button>
               <p class="stars-3">
                 <span class="visually-hidden">Количество звезд гостиницы - 3 звезды из 5</span></p>
                 <p class="rate">Рейтинг: 6,9</p>
@@ -207,15 +209,12 @@
                 <a class="card-image" href="#">
                   <img src="images/hotels/green.jpg" width="300" height="212" alt="Горы на фоне звездного неба.">
                 </a>
-                <a href="#">
-                  <h3 class="card-title">GreenTree Inn</h3>
-                </a>
+                <a class="card-title" href="#">
+                  <h3>GreenTree Inn</h3></a>
                   <p class="card-description">Гостиница</p>
-                  <p class="card-price">
-                    <span class="card-price-value">От 1500 ₽</span>
-                  </p>
-                  <p><a class="link-card" href="#">ПОДРОБНЕЕ</a></p>
-                  <p><button class="select" type="button">В ИЗБРАННОЕ</button></p>
+                  <p class="card-price">От 1500 ₽</p>
+                  <a class="link-card" href="#">ПОДРОБНЕЕ</a>
+                  <button class="select" type="button">В ИЗБРАННОЕ</button>
                   <p class="stars-2">
                     <span class="visually-hidden">Количество звезд гостиницы - 2 звезды из 5</span></p>
                     <p class="rate">Рейтинг: 5,0</p>
@@ -235,7 +234,7 @@
         <a class="pagination-link" href="#">4</a>
       </li>
       <li class="pagination-item">
-        <a class="pagination-link" href="#">...</a>
+        <a class="pagination-link-points" href="#">...</a>
       </li>
       <li class="pagination-item">
         <a class="pagination-link" href="#">10</a>
@@ -251,7 +250,7 @@
       </form>
 </section>
 <footer>
-  <h3 class="title">
+  <h3>
       <span class="visually-hidden">Социальные сети</span>
     </h3>
           <ul class="list-social">
