--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
       </li>
 <li class="light-background">
       <h3 class="title-item">Небольшая площадь</h3>
-      <p>Все достопримечательности находятся очень близко</p>
+      <p class="description">Все достопримечательности находятся очень близко</p>
       </li>
 <li class="medium-background">
       <h3 class="title-item">Красивая дорога</h3>
-      <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+      <p class="description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
       </li>
 <li class="light-background-bridge">
       <h3 class="title-item">Мало туристов</h3>
-      <p>Большинство едет в Гранд Каньон и толпится там</p>
+      <p class="description">Большинство едет в Гранд Каньон и толпится там</p>
       </li>
 <li class="dark-background">
       <div class="image-bridge"></div>
@@ -86,18 +86,18 @@
   </li>
   <li class="service-medium-background">
     <div class="home-advantages"></div>
-  <h3 class="title">Жильё</h3>
-  <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+  <h3 class="title-service">Жильё</h3>
+  <p class="description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
   </li>
   <li class="service">
-    <h3 class="title">Еда</h3>
+    <h3 class="title-service">Еда</h3>
     <div class="burger"></div>
-    <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+    <p class="description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
     </li>
     <li class="service-medium-background">
-      <h3 class="title">Сувениры</h3>
+      <h3 class="title-service">Сувениры</h3>
       <div class="gifts"></div>
-      <p>Не только китайского, но и настоящего местного производства!</p>
+      <p class="description">Не только китайского, но и настоящего местного производства!</p>
       </li>
   </ul>
   </section>
@@ -116,7 +116,7 @@
 </section>
 </main>
 <footer>
-  <h3 class="title">
+  <h3>
       <span class="visually-hidden">Социальные сети</span>
     </h3>
           <ul class="list-social">
